# simple-pack

./: .flake8  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: python-app.yml
scripts/: greet.py  linear_plot.py
src/simple/: hello.py  io.py  math.py  plot.py
tests/: test_trivial.py
tests/test_hello/: test_helloworld.py
tests/test_io/: test_append_message.py  test_get_float.py  test_get_integer.py
tests/test_math/: test_identity.py  test_invert_dict.py  test_logical.py
